# src/apis/other/otherRouter.js
@@ -1,0 +1,10 @@
+import OtherController from "./otherController";
+import express from "express";
+import asyncHandler from "express-async-handler";
+import authentication from "../../common/middleware/authentication";
+
+const routes = express.Router();
+
+routes.post("/contact-us", authentication, asyncHandler(OtherController.contactUs));
+
+module.exports = routes;
